# wasm-component-sdk

./: .gitmodules  Directory.Build.props  Directory.Packages.props  README.md  nuget.config  wasm-component-sdk.sln
.github/workflows/: build.yml
samples/calculator/Adder/: Adder.csproj  HostWorldImpl.cs  OperationsImpl.cs  calculator.wit
samples/calculator/CalculatorComposed/: CalculatorComposed.csproj
samples/calculator/CalculatorHost/: CalculatorHost.csproj  Program.cs
samples/spin-app/: .gitignore  middleware.wit
samples/spin-app/c-middleware/: build.cmd  main.c
samples/spin-app/csharp-middleware/: Middleware.cs  csharp-middleware.csproj
samples/spin-app/rust-host/: Cargo.toml  build.cmd  spin.toml
samples/spin-app/rust-host/src/: lib.rs
samples/spin-app/rust-host/wit/: middleware.wit
src/WasmComponent.Sdk/: ImportInDev.proj  WasmComponent.Sdk.csproj
src/WitBindgen/: ImportInDev.proj  WitBindgen.csproj
test/E2ETest/PackageTest/: CompositionTest.cs  PackageTest.csproj  UnitTest1.cs
test/E2ETest/testapps/: nuget.config
test/E2ETest/testapps/E2EConsumer/: E2EConsumer.csproj  Program.cs
test/E2ETest/testapps/E2EProducer/: Class1.cs  E2EProducer.csproj  OperationsImpl.cs  producer-consumer.wit
test/WasmComponentSdkTest/WasmComponentSdkTest/: SimpleProducerConsumerTest.cs  WasmComponentSdkTest.csproj
test/WasmComponentSdkTest/testapps/SimpleConsumer/: Program.cs  SimpleConsumer.csproj
test/WasmtimeCliFetcher/: FetchWasmtime.targets
test/WitBindgenTest/WitBindgenTest/: CodeGenerationTest.cs  WitBindgenTest.csproj
(+8 files in other folders)
