[package]
name = "my-rust-app"
authors = ["Steve Sanderson <SteveSandersonMS@users.noreply.github.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.15.0" }
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component" }

[workspace]

[package.metadata.component.target]
path = "../middleware.wit"
world = "hostapp"
